[metadata]
name = %%name%%
version = %%version%%
summary = %%description%%
description-file =
    README.rst
    CHANGELOG.rst
license_file = LICENSE
requires-dist =
    pyyaml

## sdist info
author = %%author%%
author_email = %%email%%
home_page = http://github.com/0k/%%name%%
license = BSD 3-Clause License
classifier =
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Intended Audience :: Developers


[backwards_compat]
## without this ``pip uninstall`` fails on recent version of setuptools
## (tested failing with setuptools 34.3.3, working with setuptools 9.1)
zip-safe = False


[bdist_wheel]
universal = 1


[files]
extra_files =
    README.rst
    CHANGELOG.rst
    setup.py

scripts =
    shyaml


[flake8]
ignore = E265,W391,E262,E126,E127
max-line-length = 80
max-complexity = 15

