[metadata]
name = %%name%%
version = %%version%%
description = %%description%%
long_description = file: README.rst, CHANGELOG.rst
license_file = LICENSE

## sdist info
author = %%author%%
author_email = %%email%%
url = http://github.com/0k/%%name%%
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
## without this ``pip uninstall`` fails on recent version of setuptools
## (tested failing with setuptools 34.3.3, working with setuptools 9.1)
zip_safe = False
install_requires =
    pyyaml

[bdist_wheel]
universal = 1

## We can't use scripts to share these simply as extension managed ``.py``
## is not correctly handled for both windows and linux to be happy.
# scripts =
#     shyaml

[options.entry_points]
console_scripts =
    ## will generate correct files with adequate extenstion in windows
    ## and linux, contrary to 'scripts'. Note that it requires 'shyaml'
    ## to be declared as a module also.
    shyaml = shyaml:entrypoint


[flake8]
ignore = E265,W391,E262,E126,E127,E266
max-line-length = 80
max-complexity = 10

